[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steamcom"
description = "Python implementation of the Steam Community API"
version = "1.2.0"
authors = [
  { name="Linar Sharifullin"},
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4>=4.11.1",
    "pycryptodomex>=3.14.1",
    "requests>=2.27.1",
    "rsa>=4.8",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
